@@ -102,5 +102,6 @@ int main(int argc, char** argv, char** env) {
 #endif
 
     // Return good completion status
-    exit(0);
+    // Don't use exit() or destructor won't get called
+    return 0;
 }
