@@ -9,6 +9,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix $fread extra semicolon inside statements. [Leendert van Doorn]
 
+****  Fix examples not flushing vcd (#2787).  [Richard E George]
+
 
 * Verilator 4.108 2021-01-10
 
